    * 4225 FIX: db2_logsizes: Removed debug output (fixes regression)

    Multisite:
    * 4143 FIX: Fixed possible log spam "MKAuthException: Invalid credentials" in web.log...
    * 4004 FIX: Fixed exception when viewing availability of BI aggregations...
    * 4144 FIX: Sidebar: Bottom of last snapin was not 100% visible
    * 4145 FIX: Fixed exception when setting output_format in wrong case

    WATO:
    * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
    * 4218 FIX: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
    * 4221 FIX: Fixed "analyse parameters" page for services with umlauts in names
    * 4224 FIX: Improved exception handling during WATO slave site activation

    Notifications:
    * 4197 FIX: Fix sending notification to global fallback email address

    Reporting & Availability:
    * 3652 FIX: Unbreak PDF exports...

    Event Console:
    * 4153 FIX: Fix forwarding notifications to Check_MK when no contact groups are set
    * 4155 FIX: Do not perform actions on events if overflow limit is active...
    * 4156 FIX: Fix off-by-one error in EC limit handling...
    * 4199 FIX: Fix detection of replication mode if EC is distributed...
    * 4200 FIX: Fix computation of Event Console performance snapin in distributed mode...

    HW/SW-Inventory:
    * 4258 FIX: snmp_extended_info: fixed undefined variable


1.4.0i3:
    Core & Setup:
    * 3978 FIX: mkbackup: Fixed backup to some CIFS shares ([Errno 13] Permission denied) '...')...
    * 4078 FIX: Fixed handling of hosts with non resolvable IP addresses during runtime...

    Checks & Agents:
    * 3988 Windows agent: new global option disabled_sections...
    * 3989 Logwatch patterns: now able to change state of context lines...
    * 4087 netgear_fans, netgear_powersupplies, netgear_temp: new checks for Netgear Switches which support the FASTPATH-BOXSERVICES-PRIVATE MIB