@@ -20,6 +20,7 @@
     * 4004 FIX: Fixed exception when viewing availability of BI aggregations...
     * 4144 FIX: Sidebar: Bottom of last snapin was not 100% visible
     * 4145 FIX: Fixed exception when setting output_format in wrong case
+    * 4226 FIX: Custom inventory painters are now correctly loaded when declared with inventory_displayhints
 
     WATO:
     * 4146 FIX: Fixed broken "Global settings" when having the Event Console disabled via "omd config"
